argocd/media-server/calibre/manifests/calibre.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    backup.velero.io/backup-volumes: "config,ingest,library"
  labels:
    app: calibre
  name: calibre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: calibre
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: "America/Chicago"
            - name: CWA_PORT_OVERRIDE
              value: "80"
          image: harbor.yanello.net/docker/crocodilestick/calibre-web-automated:v4.0.7@sha256:6900d554dcfc164250a4c90208e4277a2385f5c2dbc1bb881c5ccae2b3723d29
          imagePullPolicy: IfNotPresent
          name: calibre
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 250Mi
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: ingest
              mountPath: /cwa-book-ingest
            - name: library
              mountPath: /calibre-library
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 300
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: ingest
          persistentVolumeClaim:
            claimName: ingest
        - name: library
          persistentVolumeClaim:
            claimName: library
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: config
spec:
  storageClassName: truenas-ssd-nfs
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: ingest
spec:
  storageClassName: truenas-ssd-nfs
  accessModes:
    - ReadWriteMany
  resources:
    requests:
      storage: 1Gi
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: library
spec:
  storageClassName: truenas-ssd-nfs
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: calibre
  name: calibre
  annotations:
    lbipam.cilium.io/ips: 10.10.8.2
spec:
  type: LoadBalancer
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    app: calibre
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Calibre
    gethomepage.dev/icon: calibre
    gethomepage.dev/description: "Calibre is an e-book manager. It can view, convert,\
      \ edit and catalog e-books in all of the major e-book formats."
    gethomepage.dev/pod-selector: app=calibre
  labels:
    app.kubernetes.io/instance: calibre-app
  name: calibre-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: http
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - calibre.yanello.net
  rules:
    - backendRefs:
        - name: calibre
          namespace: calibre
          port: 80
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Scheme
                value: https
      #       set:
      #         - name: Host
      #           value: calibre.yanello.net
