argocd/media-server/calibre/manifests/httpRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Calibre
    gethomepage.dev/icon: calibre
    gethomepage.dev/description: "Calibre is an e-book manager. It can view, convert,\
      \ edit and catalog e-books in all of the major e-book formats."
    gethomepage.dev/pod-selector: app=calibre
  labels:
    app.kubernetes.io/instance: calibre-app
  name: calibre-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: http
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - calibre.yanello.net
  rules:
    - backendRefs:
        - name: calibre
          namespace: calibre
          port: 80
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Scheme
                value: https
      #       set:
      #         - name: Host
      #           value: calibre.yanello.net
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Shelfmark"
    gethomepage.dev/icon: mdi-folder-download-outline
    gethomepage.dev/description: "An intuitive web interface for searching and requesting\
      \ book downloads."
    gethomepage.dev/pod-selector: app=shelfmark
  name: shelfmark-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - shelfmark.yanello.net
  rules:
    - backendRefs:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
